--- a/IPlugExamples/IPlugEffect/resources/IPlugEffect-OSXAPP-Info.plist
+++ b/IPlugExamples/IPlugEffect/resources/IPlugEffect-OSXAPP-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>IPlugEffect.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.AcmeInc.standalone.IPlugEffect</string>
+	<string>com.AcmeInc.app.IPlugEffect</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
