stand-alone app registers auv3 with pluginkit

--- a/IPlugExamples/IPlugEffect/IPlugEffect.xcodeproj/xcshareddata/xcschemes/APP.xcscheme
+++ b/IPlugExamples/IPlugEffect/IPlugEffect.xcodeproj/xcshareddata/xcschemes/APP.xcscheme
@@ -65,6 +65,12 @@
             ReferencedContainer = "container:IPlugEffect.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "registerauv3"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
