AUv3 massive progress

--- a/common.xcconfig
+++ b/common.xcconfig
@@ -31,6 +31,7 @@ ALL_DEFS = NOMINMAX
 VST2_DEFS = VST_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
 VST3_DEFS = VST3_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
 AU_DEFS = AU_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
+AUv3_DEFS = AUv3_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
 AAX_DEFS = AAX_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
 APP_DEFS = SA_API __MACOSX_CORE__
 
