--- a/common.xcconfig
+++ b/common.xcconfig
@@ -18,6 +18,7 @@ CLANG_CXX_LIBRARY = libc++
 // the minimum OS to support
 DEPLOYMENT_TARGET = 10.7
 
+SHARED_PRECOMPS_DIR = $(TARGET_BUILD_DIR)/PCH
 
 // BUILD SETTINGS TO ENABLE DIFFERENT PREPROCESSOR MACROS, INCLUDE PATHS AND FUNCIONALITY-------------------------------
 
@@ -33,13 +34,13 @@ VST3_DEFS = VST3_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
 AU_DEFS = AU_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
 AUv3_DEFS = AUv3_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
 AAX_DEFS = AAX_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
-APP_DEFS = SA_API __MACOSX_CORE__
+APP_DEFS = APP_API __MACOSX_CORE__
 
 // Where the SDKs etc. are located in relation to the plug-in Xcode project
 PKG_MAN_PATH = /usr/local/
-WDL_PATH = $(SRCROOT)/../../WDL
+WDL_PATH = $(SRCROOT)/../../../WDL
 SWELL_PATH = $(WDL_PATH)/swell
-IPLUG_PATH = $(SRCROOT)/../../IPlug
+IPLUG_PATH = $(SRCROOT)/../../../IPlug
 
 //this build setting is included at the xcode project level, since we need all these include paths
 IPLUG_INC_PATHS = $(WDL_PATH) $(SWELL_PATH) $(IPLUG_PATH)
@@ -57,9 +58,9 @@ FT_PATH = $(PKG_PATH)/freetype2
 IGRAPHICS_INC_PATHS = $(IGRAPHICS_PATH) $(LICE_PATH) $(FT_PATH) $(NSVG_PATH) $(NVG_PATH) $(NVGMTL_PATH) $(AGG_PATH) $(PKG_PATH)
 
 // Plug-in SDK paths
-VST3_SDK = $(SRCROOT)/../../VST3_SDK
-AAX_SDK = $(SRCROOT)/../../AAX_SDK
-CA_SDK = $(SRCROOT)/../../CA_SDK
+VST3_SDK = $(SRCROOT)/../../../VST3_SDK
+AAX_SDK = $(SRCROOT)/../../../AAX_SDK
+CA_SDK = $(SRCROOT)/../../../CA_SDK
 
 //Linker paths for static libraries
 PKG_LIB_PATH = $(PKG_MAN_PATH)/lib
