--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect.props
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect.props
@@ -21,10 +21,10 @@
       <AdditionalDependencies>lice.lib;wininet.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>CALL "$(SolutionDir)\scripts\postbuild-win.bat" "$(TargetExt)" "$(BINARY_NAME)" "$(Platform)" "$(COPY_VST2)" "$(TargetPath)" "$(VST2_32_PATH)" "$(VST2_64_PATH)" "$(VST3_32_PATH)" "$(VST3_64_PATH)" "$(AAX_32_PATH)" "$(AAX_64_PATH)" "$(AAX_BUNDLE)"</Command>
+      <Command>CALL "$(SolutionDir)scripts\postbuild-win.bat" "$(TargetExt)" "$(BINARY_NAME)" "$(Platform)" "$(COPY_VST2)" "$(TargetPath)" "$(VST2_32_PATH)" "$(VST2_64_PATH)" "$(VST3_32_PATH)" "$(VST3_64_PATH)" "$(AAX_32_PATH)" "$(AAX_64_PATH)" "$(AAX_BUNDLE)"</Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>CALL "$(SolutionDir)\scripts\prebuild-win.bat" "$(TargetExt)" "$(BINARY_NAME)" "$(Platform)" "$(TargetPath)" "$(OutDir)" ..\..\AAX_SDK\Utilities\PlugIn.ico "$(AAX_BUNDLE)"</Command>
+      <Command>CALL "$(SolutionDir)scripts\prebuild-win.bat" "$(TargetExt)" "$(BINARY_NAME)" "$(Platform)" "$(TargetPath)" "$(OutDir)" ..\..\AAX_SDK\Utilities\PlugIn.ico "$(AAX_BUNDLE)"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
